# snipp-py

./: .gitignore  CHANGELOG.md  LICENSE  README.md  file_structure.md  pyproject.toml
scripts/: toml_schema.py
src/snipp/: __init__.py  __main__.py  main.py
src/snipp/assets/: metadata_schema.json  metadata_schema.toml
src/snipp/assets/schemas/: index.toml  metadata.py  metadata.toml
src/snipp/commands/: __init__.py  create.py  delete.py  deploy.py  export.py  import_snipp.py  list.py  purge.py  remove.py  rename.py  show.py
src/snipp/commands/edit/: __init__.py  abort.py  done.py  main.py
src/snipp/core/: __init__.py  errors.py  loading.py  parser.py  paths.py  snippet.py
src/snipp/schemas/: __init__.py  index.py  metadata.py  metadata.toml
tests/: test_snippets.py
