[project]
name = "snipp"
version = "0.1.0a3"
description = "CLI tool to manage snippets."
authors = [
    {name = "Nicolás Miranda",email = "nmcolivoro@outlook.cl"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rich (>=15.0.0)",
    "tomlkit (>=0.14.0)",
    "tomli (>=2.4.1,<3.0.0)",
    "pathvalidate (>=3.3.1)",
    "platformdirs (>=4.9.6)",
    "jsonschema (>=4.26.0,<5.0.0)",
]

[project.urls]
Repository = "https://github.com/nickodm/snipp-py"

[project.scripts]
snipp = "snipp.main:run"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    {include = "snipp", from = "src"},
]

# Include assets
include = [
    "src/snipp/assets/**/*"
]

[dependency-groups]
test = [
    "pytest (>=9.0.3,<10.0.0)"
]
